crates/as2/src/parser/snapshots/rascal_as2__parser__tests__all_samples@random_success.as.snap
---
source: crates/as2/src/parser/tests.rs
expression: parsed
input_file: samples/as2/random_success.as
---
Ok:
  statements:
    - Declare:
        - name: success
          value:
            span:
              start: 14
              end: 18
            value:
              Constant:
                Identifier: "true"
          type_name: ~
    - If:
        condition:
          span:
            start: 24
            end: 38
          value:
            BinaryOperator:
              - Equal
              - span:
                  start: 24
                  end: 33
                value:
                  Call:
                    name:
                      span:
                        start: 24
                        end: 30
                      value:
                        Constant:
                          Identifier: random
                    args:
                      - span:
                          start: 31
                          end: 32
                        value:
                          Constant:
                            Integer: 2
              - span:
                  start: 37
                  end: 38
                value:
                  Constant:
                    Integer: 0
        "yes":
          Block:
            - Expr:
                span:
                  start: 45
                  end: 60
                value:
                  BinaryOperator:
                    - Assign
                    - span:
                        start: 45
                        end: 52
                      value:
                        Constant:
                          Identifier: success
                    - span:
                        start: 55
                        end: 60
                      value:
                        Constant:
                          Identifier: "false"
        "no": ~
    - If:
        condition:
          span:
            start: 68
            end: 75
          value:
            Constant:
              Identifier: success
        "yes":
          Block:
            - Expr:
                span:
                  start: 82
                  end: 107
                value:
                  Call:
                    name:
                      span:
                        start: 82
                        end: 87
                      value:
                        Constant:
                          Identifier: trace
                    args:
                      - span:
                          start: 88
                          end: 106
                        value:
                          Constant:
                            String: Success! Hurrah!
        "no":
          Block:
            - Expr:
                span:
                  start: 121
                  end: 139
                value:
                  Call:
                    name:
                      span:
                        start: 121
                        end: 126
                      value:
                        Constant:
                          Identifier: trace
                    args:
                      - span:
                          start: 127
                          end: 138
                        value:
                          Constant:
                            String: "Failed :("
    - Expr:
        span:
          start: 143
          end: 161
        value:
          Call:
            name:
              span:
                start: 143
                end: 148
              value:
                Constant:
                  Identifier: trace
            args:
              - span:
                  start: 149
                  end: 160
                value:
                  Constant:
                    String: "-- end --"
